[tool.poetry]
name = "eva-2-spec"
version = "2.0.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^6.1.4"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-redirects = "^1.0.1"
mkdocs-macros-plugin = "^0.4.20"
mkdocs-awesome-pages-plugin = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
