[tool.poetry]
name = "eva-2"
version = "2.4.2"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-redirects = "^1.0.1"
mkdocs-macros-plugin = "^0.4.20"
mkdocs-awesome-pages-plugin = "^2.4.0"
mkdocs-exclude = "^1.0.2"
mkdocs-material = "^8.1.2"
pydantic = "^1.8.1"
python-slugify = "^5"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
readline = "^6.2.4"
eva-3d = {path = "eva-docs-builder", develop = true}
ipdb = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
